# RustNXRoms

./: .gitignore  Cargo.toml  README.md  flake.nix
roms/: Cargo.toml
roms/src/: crypto.rs  keyring.rs  lib.rs  readers.rs
roms/src/formats/: cnmt.rs  mod.rs  nacp.rs  nca.rs  nsp.rs  xci.rs
roms/src/fs/: hfs.rs  mod.rs  pfs.rs  romfs.rs  types.rs
test/: Cargo.toml
test/src/: main.rs
