[package]
name = "nxroms"
version = "0.1.0"
edition = "2024"

[features]
glib = ["dep:glib"]

[dependencies]
async-channel = "2.5.0"
shellexpand = "3.1.2"
thiserror = "2.0.18"
aes = "0.8.4"
ctr = "0.9.2"
ecb = "0.1.2"
xts-mode = "0.5.1"
dirs = "6.0.0"
glib = { version = "0.22.3", optional = true }
binrw = { workspace = true }
log = { workspace = true }
positioned-io = { workspace = true }
env_logger = { workspace = true }
hex = {workspace = true}
strum = "0.28.0"
strum_macros = "0.28.0"
